{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 1078,
  "lineage": "7a5a7ced-f441-a90d-2147-1e8ff3e1adf4",
  "resources": [
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d2b7951e241ed22",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-03a74304c8acc8907",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a74304c8acc8907",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Eng57Saskia_AWS",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c644064e7064ae55",
            "private_dns": "ip-117-0-1-210.eu-west-1.compute.internal",
            "private_ip": "117.0.1.210",
            "public_ip": "54.77.88.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01b990d000223b7f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eb4d69ead2d5980",
            "tags": {
              "Name": "Eng57.Saskia.B.tf.app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05090aae681fd5815"
            ]
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sg_app",
            "module.app_tier.aws_subnet.sub_public_again",
            "module.db_tier.aws_instance.db",
            "module.db_tier.aws_security_group.sgdb",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b13f993274ce14a",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-09d2ceea095ce9be8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d2ceea095ce9be8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Eng57Saskia_AWS",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01f101cca30d0d4b6",
            "private_dns": "ip-117-0-2-68.eu-west-1.compute.internal",
            "private_ip": "117.0.2.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-089cd399787018df1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb3449ef6d00c14f",
            "tags": {
              "Name": "Eng57.Saskia.B.tf.db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035a425002695dcad"
            ]
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sg_app",
            "module.db_tier.aws_security_group.sgdb",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-00b33a4eb40c1ad58",
            "id": "igw-00b33a4eb40c1ad58",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Saskia.B.igw"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/En57-Saskia-tf-lb/b08c7ed4cee8a4ca",
            "arn_suffix": "net/En57-Saskia-tf-lb/b08c7ed4cee8a4ca",
            "dns_name": "En57-Saskia-tf-lb-b08c7ed4cee8a4ca.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/En57-Saskia-tf-lb/b08c7ed4cee8a4ca",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "En57-Saskia-tf-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09eb4d69ead2d5980"
              }
            ],
            "subnets": [
              "subnet-09eb4d69ead2d5980"
            ],
            "tags": {
              "Name": "Eng57-Saskia-lb-tf"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.sub_public_again"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-07f3f8b7ebbc900d1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "117.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-07f3f8b7ebbc900d1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "117.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0bb3449ef6d00c14f"
            ],
            "tags": {
              "Name": "Eng57.Saskia.B.nacls.private"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.sub_public_again",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "naclpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0305432bf7e668867",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "90.127.165.91/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              }
            ],
            "id": "acl-0305432bf7e668867",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "90.127.165.91/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-09eb4d69ead2d5980"
            ],
            "tags": {
              "Name": "Eng57.Saskia.B.nacls.public"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.sub_public_again"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routepublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-006fd874b2d45b312",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b33a4eb40c1ad58",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng57.Saskia.B.route.public"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e98f890277f324de",
            "route_table_id": "rtb-006fd874b2d45b312",
            "subnet_id": "subnet-09eb4d69ead2d5980"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc",
            "module.app_tier.aws_route_table.routepublic",
            "module.app_tier.aws_subnet.sub_public_again"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05090aae681fd5815",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05090aae681fd5815",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "httpx from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "httpx from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "90.127.165.91/32"
                ],
                "description": "httpx from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgappsvb",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.Saskia.B.sg.app.2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-035a425002695dcad",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035a425002695dcad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "connection from DB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05090aae681fd5815"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "db-sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.Saskia.B.sg.db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sg_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0befabe3b8629706e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "117.0.3.0/24",
            "id": "subnet-0befabe3b8629706e",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Saskia.B.sub.public"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_public_again",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-09eb4d69ead2d5980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "117.0.1.0/24",
            "id": "subnet-09eb4d69ead2d5980",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Saskia.B.sub.public"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0bb3449ef6d00c14f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "117.0.2.0/24",
            "id": "subnet-0bb3449ef6d00c14f",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Saskia.B.sub.private"
            },
            "vpc_id": "vpc-0ae1ba8408f239e3d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0ae1ba8408f239e3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "117.0.0.0/16",
            "default_network_acl_id": "acl-0d06a7afdfb15ccc8",
            "default_route_table_id": "rtb-02b43278e2600c1fd",
            "default_security_group_id": "sg-07262f905dd158e6c",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae1ba8408f239e3d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b43278e2600c1fd",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Saskia.B.tf.vpc"
            }
          }
        }
      ]
    }
  ]
}